--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,10 @@ psycopg2 = "*"
 django-crispy-forms = "*"
 pillow = "*"
 djangorestframework = "*"
+django-heroku = "*"
+whitenoise = "*"
+dj-database-url = "*"
+gunicorn = "*"
 
 [dev-packages]
 
